--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <head>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-        <link href="styles.css" rel="stylesheet">
+        <link href="css/styles.css" rel="stylesheet">
         <title>My Webpage</title>
     </head>
     <body>
           <nav class="navbar navbar-dark bg-primary">
             <div class="container-fluid">
-              <a class="navbar-brand" href="index.html"><img src="/image/top.png" alt="Smiley face" width="50" height="35">Tavo</a>
+              <a class="navbar-brand" href="index.html"><img src="image/top.png" alt="Smiley face" width="50" height="35">Tavo</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -20,14 +20,14 @@
                     <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="goku.html">personaje favorito</a>
+                    <a class="nav-link" href="paginas/goku.html">personaje favorito</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="top.html">Banda favorita</a>
+                    <a class="nav-link" href="paginas/top.html">Banda favorita</a>
                   </li>
                   <li class="nav-item dropdown">
                   <li class="nav-item">
-                    <a class="nav-link" href="ajedrez.html">Juego favorito</a>
+                    <a class="nav-link" href="paginas/ajedrez.html">Juego favorito</a>
                   </li>
               </div>
             </div>
@@ -84,7 +84,7 @@
   <p><h6>Bueno mi personaje favorito es dificil de decidir hay varios, me identifico bastante rapido la verdad xd, pudiera hacerte una lista pero no sabria elegir pero si vamos a decir que mi personaje favorito lo tratare de distinguir por un que creo que seria el mejor personaje y el que me marco la infancia
   a esa edad que lo conoci era lo mejor para mi.</h6></p>
   <h6> si quieres saber quien es mi personaje sigueme</h6>
-  <a href="goku.html"><center><button id="boton" type="button" class="btn btn-primary btn-lg">apretame</button></center></a>
+  <a href="paginas/goku.html"><center><button id="boton" type="button" class="btn btn-primary btn-lg">apretame</button></center></a>
   <br>
 </div>
 <div class="index2">
@@ -93,7 +93,7 @@
     <p><h6>Al tratar de elegir mi banda favorita es  raro porque no tengo en expesifico lo que me gusta en el ambito musical,
         pero si hubo una banda que me logro marcar tan dastricamente.</h6></p>
     <h6> si quieres saber quienes son sigueme:</h6>
-    <a href="top.html"><center><button type="button" class="btn btn-primary btn-lg">apretame</button></center></a>
+    <a href="paginas/top.html"><center><button type="button" class="btn btn-primary btn-lg">apretame</button></center></a>
     <br>
   </div>
   <div class="index3">
@@ -102,11 +102,11 @@
     <p><h6>Al tratar de elegir mi banda favorita es  raro porque no tengo en expesifico lo que me gusta en el ambito musical,
         pero si hubo una banda que me logro marcar tan dastricamente.</h6></p>
     <h6> si quieres saber quienes son sigueme:</h6>
-    <a href="ajedrez.html"><center><button type="button" class="btn btn-primary btn-lg">apretame</button></center></a>
+    <a href="paginas/ajedrez.html"><center><button type="button" class="btn btn-primary btn-lg">apretame</button></center></a>
     <br>
   </div>
             <footer>
-            <center><h3><a href="index.html"><img src="/image/top.png" alt="Smiley face" width="50" height="35">Tavo</a></h3></center>
+            <center><h3><a href="index.html"><img src="image/top.png" alt="Smiley face" width="50" height="35">Tavo</a></h3></center>
             <br><br>
 
           </footer>
