--- a/paginas/goku.html
+++ b/paginas/goku.html
@@ -4,46 +4,35 @@
     <head>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-        <link href="styles.css" rel="stylesheet">
+        <link href="../css/styles.css" rel="stylesheet">
         <title>My Webpage</title>
     </head>
     <body>
 
-        <nav class="navbar navbar-dark bg-primary">
-            <!-- Navbar content -->
-            <div class="container-fluid">
-              <a class="navbar-brand" href="index.html"><img src="/image/top.png" alt="Smiley face" width="50" height="35">Tavo</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="goku.html">personaje favorito</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="top.html">Banda favorita</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="ajedrez.html">Juego favorito</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Dropdown link
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
+      <nav class="navbar navbar-dark bg-primary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="../index.html"><img src="../image/top.png" alt="Smiley face" width="50" height="35">Tavo</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../paginas/goku.html">personaje favorito</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../paginas/top.html">Banda favorita</a>
+              </li>
+              <li class="nav-item dropdown">
+              <li class="nav-item">
+                <a class="nav-link" href="../paginas/ajedrez.html">Juego favorito</a>
+              </li>
+          </div>
+        </div>
+      </nav>
           <div class="fondo2">
             <h1 class="texto">"Dragon ball me marco mi infancia,</h1>
             <h1 class="texto2">&nbsp; y el personaje que logro hacerlo fue Goku"</h1></p>
@@ -56,7 +45,7 @@
             <p><h6>Goku es uno de los personajes de anime que han logrado superar las barreras de cualquier cultura y generación. &nbsp; Originalmente enviado a la Tierra como un infante volador con la misión de conquistarla. Sin embargo, el caer por un barranco le proporcionó un brutal golpe que si bien casi lo mata, este alteró su memoria y anuló todos los instintos violentos de su especie, lo que lo hizo crecer con un corazón puro y bondadoso, pero conservando todos los poderes de su raza. No obstante, en la nueva continuidad de Dragon Ball se establece que él fue enviado por sus padres a la Tierra con el objetivo de sobrevivir a toda costa a la destrucción de su planeta por parte de Freeza. Más tarde, Kakarot, ahora conocido como Son Goku, se convertiría en el príncipe consorte del monte Fry-pan y líder de los Guerreros Z, así como el mayor defensor de la Tierra y del Universo 7, logrando mantenerlos a salvo de la destrucción en innumerables ocasiones, a pesar de no considerarse a sí mismo como un héroe o salvado</h6></p>
             <div>
               <p> <h6>Aunque Goku es de raza alienígena, en un inicio estaba planeado que fuera humano, pero al aparecer peleadores de otros planetas se estableció como un saiyano. Para hacer que la historia avanzara más rápido, el manga le dio a Goku la habilidad de tele-transportarse, para así poder mover a la acción a otro sitio en segundos. Akira Toriyama explica que Goku fue creado basándose en los ropajes utilizados por los monjes Shaolin de China, ya que le quería dar un aire chino a Dragon Ball</h6>
-              <img src="/image/goku.jpg"  align="left">
+              <img src="../image/goku.jpg"  align="left">
               <p><h6>En las etapas iniciales del manga, algunos lectores comentaron que Goku era muy simple, así que el autor cambió un poco su apariencia y agregó a algunos personajes como Kame Sen'nin (conocido mejormente como maestro Roshi) y Krilin; y creó el Torneo Mundial de las Artes Marciales para darle al manga un estilo más de pelea. Como se comentaba que Goku iba a ganar el torneo, Toriyama hizo que perdiera dos, aunque él también quería que ganara.</h6></p>
               <h3>Caracteristicas</h3>
               <p><h6>Como saiyano, poseía ciertas características que le hacían ser muy diferente de los demás seres humanos: tenía una cola de mono que le permitía transformarse en mono gigante, un mono con un poder destructor inmenso, la cual le fue arrancada numerosas veces por varios personajes, entre ellos Kami para evitar que se transformase; los saiyanos poseen una particularidad en el cabello y es que siempre es de un color oscuro y después de unos años deja de crecer y se mantiene así para toda la vida; también tienen la característica de que cada vez que tienen un combate extremo, vuelven con más fuerza de la que tenían, así es como entrenan los saiyanos muy duro para incrementar su Ki.</h6></p>
@@ -87,7 +76,7 @@
             En este estado, Goku no atiende a demasiadas razones, y además de aumentar su tamaño también gana una fuerza descomunal. Una vez se le corta la cola de mono, ya no hay que preocuparse más por esta transformación tan destructiva.</h6></p>
             <br><br>
             <h1>Kaio-Ken</h1>
-            <img src="/image/kaio-ken.jpg"  width="450" height="600" align="left"> <img src="https://pa1.narvii.com/6366/a0c660e407ab283e85bd0b20ce994ea3c66fae78_hq.gif" height="600" align="right">
+            <img src="../image/kaio-ken.jpg"  width="450" height="600" align="left"> <img src="https://pa1.narvii.com/6366/a0c660e407ab283e85bd0b20ce994ea3c66fae78_hq.gif" height="600" align="right">
             <br clear="all">
             <p><h6>Esta transformación permite a Goku aumentar su poder de forma exponencial durante un espacio de tiempo muy, muy corto. Así que tiene que ser certero para asestar golpes definitivos a sus enemigos que, en ocasiones, le han visto alcanzar un multiplicador de x100 que arrasa con todo, incluido al mismísimo Lord Slug (mejor conocido como el Señor Slug).</h6></p>
             <br><br>
@@ -126,7 +115,7 @@
                 <h1>Goku Ultra Intisto</h1>
                 <br><br>
                 <p><h6>
-                <img src="/image/ultra_instint.png"  align="left">
+                <img src="../image/ultra_instint.png"  align="left">
                 El Ultra Instinto es una técnica o estado que provoca que el cuerpo reaccione de forma instintiva ante los ataques de los rivales.&nbsp; Moverse antes de pensar es la principal habilidad de una fase que provoca que las pupilas se vuelvan plateadas y una energía azulada resplandezca alrededor del cuerpo del saiyan.&nbsp;El cabello se eriza ligeramente y un alarido gutural se entremezcla con la voz de Goku, el usuario de una técnica solo al alcance de los dioses, dando como resultado una sensación espectacular.
                 </h6></p>
                 <br clear="left"><br>
