ahora si cargara

--- a/paginas/goku.html
+++ b/paginas/goku.html
@@ -66,7 +66,7 @@
            <h1>transformaciones de Goku</h1>
            <br> <br>
            <br> <br>
-           <span><center><img src="https://eloutput.com/app/uploads-eloutput.com/2022/09/transformaciones-goku.jpg "></center></span>
+           <span><center><img src="https://televisa.brightspotcdn.com/dims4/default/68641dc/2147483647/strip/true/crop/1527x859+464+6/resize/1200x675!/quality/90/?url=https:%2F%2Ftelevisa-brightspot.s3.amazonaws.com%2Fapi%2F15%2F5f%2Fe6cd4dfb40ad9b819e7df5642d41%2Ftransformaciones-de-goku.jpg "></center></span>
            <br> <br>
            <br><br>
            <p><h1>Ozaru</h1></p>
