--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
           <div class="index0">
             <h1>bienvenidos a mi pagina!</h1>
                   <div primer><p>tiempo en la pagina</p><p id="contador"></p></div>
-                  <script src="contador.js"></script>
             <br><br>
             </div>
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
@@ -110,5 +109,6 @@
             <br><br>
 
           </footer>
+    <script src="/js/contador.js"></script>
     </body>
 </html>
